# SingleTetris

./: .gitignore  CMakeLists.txt  Main.c  Main.h  README.md
include/: Music.h  Tetris.h  WinAPI.h
lib/: system.h
lib/macos/: Windows.h
sound/: soundplayer.c  source.url  wav_converter.url
src/: Music.c  Tetris.c  WinAPI.c
